@@ -30,6 +30,6 @@
 
 #include "configfile.h"
 
-int createimage(CONF *config, char lines[6][80]);
+int createimage(CONF *config, char *lines[6]);
 
 #endif
