@@ -2,6 +2,10 @@ Version 2.0.0rc6 - The '???' version.
 ----------
 2004-0?-??
 
+	GonoszTopi:
+		* Patch to fix buffer overflow in cas when line had more than
+		  80 chars.
+
 	Hetfield:
 		* Lots of 3.4.x compilation fixes, due to -DWX_PRECOMP
 		  and wx headers checks.
